# sup-decode

./: Cargo.toml  README.md  justfile  renovate.json  watch.sh
.github/: dependabot.yml
benches/: parser.rs
data/: mummyforced.sup  small.sup
src/: main.rs  ocr.rs  segment.rs  ui.rs
src/decode/: mod.rs  ods.rs  pcs.rs  pds.rs  rle.rs  wds.rs
src/widgets/: display_set.rs  mod.rs
