[package]
name = "sup-decode"
authors = ["Rob Ede <robjtede@icloud.com>"]
edition = "2024"
rust-version = "1.94"

[dependencies]
chrono = "0.4"
log = "0.4"
image = "0.25"
iced = { version = "0.13", features = ["canvas"] }
strum = { version = "0.28", features = ["derive"] }
winnow = "1"
eyre = "0.6"
color-eyre = "0.6"

[dev-dependencies]
hex-literal = "1"
