[package]
name = "sup-decode"
authors = ["Rob Ede <robjtede@icloud.com>"]
edition = "2024"
rust-version = "1.94"

[dependencies]
chrono = "0.4"
color-eyre = "0.6"
eyre = "0.6"
iced = { version = "0.14", features = ["canvas"] }
image = "0.25"
strum = { version = "0.28", features = ["derive"] }
tracing = "0.1.30"
winnow = "1"

[dev-dependencies]
hex-literal = "1"
